Fixed Image Width on Mobile

--- a/code/assets/css/main.css
+++ b/code/assets/css/main.css
@@ -181,6 +181,10 @@ a:after {
     color: white;
 }
 
+#content img {
+    width: 90%
+}
+
 #info h1 {
     color: #cc2e3a;
     background-color: #ffffff;
